用户数据导出,品牌数据导入

--- a/dao/src/main/resources/cn/itcast/core/dao/template/TypeTemplateDao.xml
+++ b/dao/src/main/resources/cn/itcast/core/dao/template/TypeTemplateDao.xml
@@ -110,7 +110,7 @@
     values (#{id,jdbcType=BIGINT}, #{name,jdbcType=VARCHAR}, #{specIds,jdbcType=VARCHAR}, 
       #{brandIds,jdbcType=VARCHAR}, #{customAttributeItems,jdbcType=VARCHAR})
   </insert>
-  <insert id="insertSelective" parameterType="cn.itcast.core.pojo.template.TypeTemplate" >
+  <insert id="insertSelective" parameterType="cn.itcast.core.pojo.template.TypeTemplate" useGeneratedKeys="true" keyProperty="id">
     insert into tb_type_template
     <trim prefix="(" suffix=")" suffixOverrides="," >
       <if test="id != null" >
