Echars折线图,饼状图.

--- a/dao/src/main/resources/cn/itcast/core/dao/template/TypeTemplateDao.xml
+++ b/dao/src/main/resources/cn/itcast/core/dao/template/TypeTemplateDao.xml
@@ -213,4 +213,9 @@
       custom_attribute_items = #{customAttributeItems,jdbcType=VARCHAR}
     where id = #{id,jdbcType=BIGINT}
   </update>
+  <select id="selectNames"  resultType="String" >
+    select
+    name
+    from tb_type_template
+  </select>
 </mapper>
